; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_nutdec.c_find_startcode.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_nutdec.c_find_startcode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i32)* @find_startcode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_startcode(i32* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  br label %9

9:                                                ; preds = %25, %3
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %7, align 4
  %12 = call i64 @find_any_startcode(i32* %10, i32 %11)
  store i64 %12, i64* %8, align 8
  %13 = load i64, i64* %8, align 8
  %14 = load i64, i64* %6, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %9
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @avio_tell(i32* %17)
  %19 = sub nsw i32 %18, 8
  store i32 %19, i32* %4, align 4
  br label %26

20:                                               ; preds = %9
  %21 = load i64, i64* %8, align 8
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %20
  store i32 -1, i32* %4, align 4
  br label %26

24:                                               ; preds = %20
  br label %25

25:                                               ; preds = %24
  store i32 -1, i32* %7, align 4
  br label %9

26:                                               ; preds = %23, %16
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i64 @find_any_startcode(i32*, i32) #1

declare dso_local i32 @avio_tell(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
